grass (6.4.0~rc3-3) unstable; urgency=low

  * NOT RELEASED.
  * Fixed debian/watch to see also RC versions. Not perfect but working.
  * Added xml2 and other r.in.wms related among Suggests in debian/control.
  * Added proj-bin among Suggests in debian/control.
  * Moved build-dep from proj to libproj-dev.
  * Grass-doc section set to doc instead of science.
  * Added a libgdal.so link to the system GDAL shlib, to allow external raster/vector
    support to work.
  * Policy bumped to 3.8.1, without changes.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 23 Mar 2009 16:41:02 +0100

grass (6.4.0~rc3-2) unstable; urgency=low

  * Removed obsolete etc/ld.so.conf.d directory in debian/grass.dirs.
  * Fixed instdir.dpatch for the right include directory in the pkg-config file.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 03 Mar 2009 18:11:23 +0100

grass (6.4.0~rc3-1) unstable; urgency=low

  * New upstream pre-release for next stable. 
    From now on all grass-related directories are versionend to allow people installing
    packaged unofficial/testing versions.
  * Removing Tcl Lenny related code in debian/rules. 
  * Some minor clean-ups in debian/rules.
  * Obsolete NEWS file removed.
  * Removed pre-lenny compatibility build-deps.
  * Debhelper level moved to 7, now using dh_prep.
  * Removed ld.so file installation. Grass programs must be called under Grass environment,
    so it is pointless and can be dangerous when different versions are installed. This
    is also true for Qgis and its Grass plugin. As consequence postinst and postrm files 
    have been removed as obsolete.
  * Fixed htmlgen-fakeroot.dpatch, incredibly broken without notice. 
  * Cleaned debian/control.

  * Merging relevant changes in the stable 6.2.3 tree with the experimental DebianGis series:

  	From 6.2.3-3:
        o Fixated patch rule.

        From 6.2.3-2:
        o Added libfftw3-dev build-dep to reflect current library name.
          (it closed: #458232)