@@ -1,0 +1,1 @@
+usr/share/pkgconfig/grass@VERSION@.pc usr/share/pkgconfig/grass.pc
