@@ -1,0 +1,1 @@
+usr/share/doc/grass-doc/html usr/lib/grass@VERSION@/docs/html
