@@ -1,0 +1,8 @@
+usr/bin/grass@VERSION@
+usr/lib/grass@VERSION@/bin
+usr/lib/grass@VERSION@/bwidget
+usr/lib/grass@VERSION@/driver
+usr/lib/grass@VERSION@/etc
+usr/lib/grass@VERSION@/fonts
+usr/lib/grass@VERSION@/scripts
+usr/lib/grass@VERSION@/lib
