@@ -1,0 +1,1 @@
+usr/bin/grass@VERSION@ usr/bin/grass
